# StructuralRL

./: .gitignore  CLAUDE.md  README.md  pyproject.toml  structural_init_autonomous_labs (1).tex  structural_init_for_agentic_coordination_v2 (2).tex
structuralrl/: __init__.py
structuralrl/agents/: __init__.py  collective.py  improve.py
structuralrl/configs/: phase1_sim.yaml
structuralrl/data/: __init__.py  schema.py  synthetic.py  tier1_platform.py  tier2_human.py  tier3_vcs.py
structuralrl/estimation/: __init__.py  anchor.py  ccp.py  forward_sim.py  identified_set.py  normalization.py  pooling.py  second_step.py  transition.py
structuralrl/evaluation/: __init__.py  go_no_go.py  interaction_stats.py  sufficiency_test.py  transfer_test.py
structuralrl/pipelines/: __init__.py  _config.py  phase1_sim.py  phase1_tier3.py  phase2_real.py
structuralrl/representation/: __init__.py  _torch_encoder.py  encoder.py  moves.py
structuralrl/tests/: test_forward_sim.py  test_recovery.py  test_schema_and_taxonomy.py
