[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "structuralrl"
version = "0.0.1"
description = "Structural initialization for a coordinated multi-agent collective for autonomous-laboratory discovery (BBL / Hotz-Miller two-step estimator + RL warm-start)."
readme = "README.md"
requires-python = ">=3.10"
license = { text = "Proprietary" }
authors = [{ name = "StructuralRL contributors" }]

# Core numerical/data stack. Heavy/optional pieces (torch for the NN encoder &
# Stage 4 RL) are extras so the estimator unit tests run on a light install.
dependencies = [
    "numpy>=1.24",
    "scipy>=1.10",
    "pandas>=2.0",
    "pyarrow>=12.0",
    "pyyaml>=6.0",
]

[project.optional-dependencies]
nn = ["torch>=2.0"]
viz = ["matplotlib>=3.7"]
dev = ["pytest>=7.4", "pytest-cov>=4.1"]

[tool.setuptools.packages.find]
where = ["."]
include = ["structuralrl*"]

[tool.pytest.ini_options]
testpaths = ["structuralrl/tests"]
addopts = "-q"

[tool.ruff]
line-length = 100
target-version = "py310"
